Update r_pufky.srv.systemd override.
Added:
* r_pufky.srv.systemd override added as required
  option to support drop ins.

--- a/tasks/incremental_snapshots.yml
+++ b/tasks/incremental_snapshots.yml
@@ -31,6 +31,7 @@
     systemd_services:
       - name: 'zfs_snapshot'
         state: 'present'
+        override: false
         unit:
           description: 'run ZFS snapshots and upload datasets'
           requires: ['zfs_snapshot.timer']
@@ -43,6 +44,7 @@
     systemd_timers:
       - name: 'zfs_snapshot'
         state: 'present'
+        override: false
         unit:
           description: 'trigger timer for ZFS snapshots'
         timer:
@@ -59,6 +61,8 @@
     systemd_services:
       - name: 'zfs_snapshot'
         state: 'absent'
+        override: false
     systemd_timers:
       - name: 'zfs_snapshot'
         state: 'absent'
+        override: false
