Add ZFS sharing restart.
Added:
* zfs_pools_restart_share_enable - restarts
  zfs-share service at end of role to re-export
  NFS and SMB dataset shares.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -42,6 +42,11 @@ zfs_pools: []
 # Default: False.
 zfs_pools_force: false
 
+# Export NFS/SMB shares on completion?
+#
+# Default: False.
+zfs_pools_restart_share_enable: false
+
 ###############################################################################
 # ZFS Snapshot User
 ###############################################################################
