--- a/tasks/import.yml
+++ b/tasks/import.yml
@@ -31,5 +31,5 @@
   ansible.builtin.include_tasks: 'import_zfs_pool.yml'
   loop: '{{ zfs_pools }}'
   loop_control:
-    loop_var: pool
+    loop_var: 'pool'
     label: '{{ pool.name }}'
