--- a/molecule/dataset/converge.yml
+++ b/molecule/dataset/converge.yml
@@ -4,9 +4,9 @@
   gather_facts: true  # ansible_kernel
   become: true
   tasks:
-    - name: 'Dataset | converge | apply r_pufky.srv.zfs'
+    - name: 'Dataset | converge | apply r_pufky.deb.zfs'
       ansible.builtin.include_role:
-        name: 'r_pufky.srv.zfs'
+        name: 'r_pufky.deb.zfs'
       vars:
         zfs_pools:
           - name: 'test'
