--- a/tasks/dataset.yml
+++ b/tasks/dataset.yml
@@ -1,5 +1,4 @@
 ---
-# yamllint disable rule:line-length
 ###############################################################################
 # Set ZFS pool dataset options.
 ###############################################################################
@@ -8,8 +7,13 @@
 #   container: str - ZFS pool name from zfs_pools.
 #   set: dict - ZFS dataset options from zfs_pools.datasets.
 
-- name: 'Dataset | set properties {{ container }}/{{ set.name }}'  # noqa name[template] use full ZFS dataset name.
-  ansible.builtin.command: '/usr/sbin/zfs set {{ item.option }}="{{ item.value }}" "{{ container }}/{{ set.name }}"'
+- name: 'Dataset | set properties {{ container }}/{{ set.name }}'
+  ansible.builtin.shell: >  # noqa name[template] use full ZFS dataset name.
+      /usr/sbin/zfs set
+      {{ item.option }}="{{ item.value }}"
+      {{ container }}/{{ set.name }}
+  args:
+    executable: '/bin/bash'
   register: _zfs_set
   changed_when: _zfs_set.rc == 0
   failed_when: _zfs_set.rc > 0
