--- a/molecule/dataset/prepare.yml
+++ b/molecule/dataset/prepare.yml
@@ -1,16 +1,15 @@
 ---
-# yamllint disable rule:line-length
 - name: 'Dataset | prepare'
   hosts: 'all'
   gather_facts: true  # ansible_kernel
   become: true
   tasks:
-    # Apply the role in default state to support ZFS operations
-    - name: 'Dataset | prepare | apply r_pufky.srv.zfs'
+    # Apply the role in default state to support ZFS operations.
+    - name: 'Dataset | prepare | apply r_pufky.deb.zfs'
       ansible.builtin.include_role:
-        name: 'r_pufky.srv.zfs'
+        name: 'r_pufky.deb.zfs'
 
-    # Create testing pool for convergence testing
+    # Create testing pool for convergence testing.
     - name: 'Dataset | prepare | create file block devices'
       ansible.builtin.command: 'dd if=/dev/zero of=/tmp/fblk bs=1M count=128'
       changed_when: false
