Update metadata description.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@
 galaxy_info:
   role_name: 'zfs'
   author: 'r_pufky'
-  description: 'ZFS Pool & Snapshot Management'
+  description: 'ZFS Pool & Snapshot Management.'
   company: 'N/A'
   license: 'AGPL-3.0 License'
   min_ansible_version: '2.18.0'
